Introduction of a horizontal scroll mixin that displays a dropshadow as a visual cue. Usage on responsive tables and secrets with <pre> Fixes https://github.com/openshift/origin-web-console/issues/1237

--- a/app/styles/_forms.less
+++ b/app/styles/_forms.less
@@ -9,6 +9,7 @@
 }
 
 .copy-to-clipboard-multiline {
+  display: block;
   position: relative;
   width: 100%;
   a {
